--- a/pbta/package.json
+++ b/pbta/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "axios": "^1.9.0",
+    "d3": "^7.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-modal": "^3.16.3",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/react-modal": "^3.16.3",
     "@types/react-router-dom": "^5.3.3"
   }
